--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "d3": "^7.8.2",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
+    "@types/d3": "^7.4.0",
     "@types/jsdom": "^21.1.0",
     "@types/node": "^18.14.0",
     "@vitejs/plugin-vue": "^4.0.0",
