Well, I'll be damned.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,10 @@
     {
       "path": "./tsconfig.vitest.json"
     }
-  ]
+  ],
+  
+  // "vueCompilerOptions": {
+  //   "target": 2.7,
+  //   "experimentalDisableTemplateSupport": true
+  // }
 }
