--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "d3-zoom": "^3.0.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
+    "vue-resize-split-pane": "^0.1.5",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
@@ -38,8 +39,10 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
+    "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
+    "sass-loader": "^13.2.0",
     "start-server-and-test": "^1.15.4",
     "typescript": "~4.7.4",
     "vite": "^4.1.3",
