--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "d3-zoom": "^3.0.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
+    "vue-multi-split-pane": "^1.2.0",
     "vue-resize-split-pane": "^0.1.5",
     "vue-router": "^4.1.6"
   },
