--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
   "dependencies": {
     "d3": "^7.8.2",
     "d3-drag": "^3.0.0",
+    "d3-selection-multi": "^0.3.0",
     "d3-zoom": "^3.0.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
-    "vue-multi-split-pane": "^1.2.0",
-    "vue-multipane": "^0.9.5",
-    "vue-resize-split-pane": "^0.1.5",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
