--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "d3-zoom": "^3.0.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
+    "vue-cookies": "^1.8.3",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
