--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,9 +1,12 @@
 {
   "extends": "./tsconfig.app.json",
   "exclude": [],
+  "include": ["src/**/*"],
   "compilerOptions": {
+    "allowJs": true,
     "composite": true,
+    "target": "ESNext",
     "lib": [],
-    "types": ["node", "jsdom"]
+    "types": ["vite/client", "node", "jsdom"]
   }
 }
