--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "d3-drag": "^3.0.0",
     "d3-selection-multi": "^0.3.0",
     "d3-zoom": "^3.0.0",
+    "express": "^4.18.2",
     "pinia": "^2.0.32",
+    "serve-static": "^1.15.0",
     "vue": "^3.2.47",
     "vue-cookies": "^1.8.3",
     "vue-router": "^4.1.6"
