--- a/package.json
+++ b/package.json
@@ -12,11 +12,7 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/",
-    "postinstall": "npm install express"
-  },
-  "engines": {
-    "node": "19.x"
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "d3": "^7.8.2",
