--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "serve-static": "^1.15.0",
     "vue": "^3.2.47",
     "vue-cookies": "^1.8.3",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
